# alls_recorder

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  build_all.ps1
.github/workflows/: build-release.yml
cli-capture/: README.md  cli.md
cli-capture/cli-capture/: CMakeLists.txt  main.cpp
cli-capture/patches/: 0001-obs-build-flags.patch
cli-capture/scripts/: build_windows.bat
server/: Cargo.toml  schema.sql
server/migrations/: 20240216000000_init.sql  20260304000100_add_capture_mode.sql
server/src/: main.rs
server/src/api/: announcements.rs  auth.rs  files.rs  hardware.rs  mod.rs  recorder.rs  service.rs  settings.rs  setup.rs  user_config.rs  users.rs
server/src/core/: agent.rs  agent_client.rs  auth.rs  hardware.rs  mod.rs  recorder.rs
server/src/db/: mod.rs
web-ui/: README.md  package-lock.json  package.json
web-ui/src/: App.tsx  index.css
web-ui/src/components/: AdminDashboard.tsx  BitrateHelper.md  BitrateHelper.tsx  FileList.tsx  PasswordStrengthIndicator.tsx  README.md  UserDashboard.tsx  UserSettingsModal.tsx
web-ui/src/pages/: BackendDiscovery.tsx  Dashboard.tsx  InitPage.tsx  Login.tsx
